--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
             <img src="images/my-bg1.png" alt="my pic">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/my-bg22.png" alt="my photo">
+        </div>
+        <div class="half-width">
+            <h1> Dream Big </h1>
+            <h2>Become a Web developer </h2>
+            <p>
+                I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                how to make simple website. My goal is to build 3 websites and learn advanced topics.
+            </p>
+            <a class="link-button" target="_blank" href="https://programminghero1.github.io/developer-portfolio/">
+                DOWNLOAD RESUME</a>
+
+        </div>
+    </section>
 
 </body>
 
