--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="top-bannar">
+    <section class="top-bannar flexible-container">
         <div class="half-width">
             <h1> Welcom to</h1>
             <h1> <samp class="orange-colour"> Iqbal kabir </samp> world</h1>
@@ -32,8 +32,8 @@
             <img src="images/my-bg1.png" alt="my pic">
         </div>
     </section>
-    <section class="dream-big">
-        <div class="half-width">
+    <section class="dream-big flexible-container">
+        <div class="half-width flexible-container">
             <img src="images/my-bg22.png" alt="my photo">
         </div>
         <div class="half-width">
@@ -45,10 +45,32 @@
             </p>
             <a class="link-button" target="_blank" href="https://programminghero1.github.io/developer-portfolio/">
                 DOWNLOAD RESUME</a>
-
         </div>
     </section>
-
+    <section>
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="half-width experience-item">
+                <h1>Full Stack Web Developer</h1>
+                <h2 class="orange-colour">2021-Present | Pro Level Developer</h2>
+                <p>
+                    I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
+                </p>
+            </div>
+            <div class="half-width experience-item">
+                <h1>Baby Web Developer</h1>
+                <h2 class="orange-colour">
+                    2020-2021 | Programming Hero Learner
+                </h2>
+                <p>
+                    They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
