--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section>
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="half-width experience-item">
+            <div id="full-web" class="half-width experience-item">
                 <h1>Full Stack Web Developer</h1>
                 <h2 class="orange-colour">2021-Present | Pro Level Developer</h2>
                 <p>
@@ -59,7 +59,7 @@
                     Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
                 </p>
             </div>
-            <div class="half-width experience-item">
+            <div id="baby-web" class="half-width experience-item">
                 <h1>Baby Web Developer</h1>
                 <h2 class="orange-colour">
                     2020-2021 | Programming Hero Learner
@@ -71,6 +71,12 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>
+            © Peter Parker 2021, a Programming Hero initiative.
+        </p>
+    </footer>
 </body>
+
 
 </html>
