--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 DOWNLOAD RESUME</a>
         </div>
     </section>
-    <section>
+    <section class="experience">
         <h1>Experiences</h1>
         <div class="flexible-container">
             <div id="full-web" class="half-width experience-item">
